--- a/.gitconfig
+++ b/.gitconfig
@@ -18,7 +18,7 @@
 	last = log -1 HEAD
 	undo = reset --soft HEAD^
 	amend = commit --amend
-	random = !"git add -A; git commit -am \"$(echo $(curl -s http://whatthecommit.com/index.txt)\" (http://whatthecommit.com)\")\"; git pull --rebase; git push"
+	random = !"git add -A; git commit -am \"$(echo $(curl -s http://whatthecommit.com/index.txt)\" (http://whatthecommit.com)\")\""
 
 [color]
 	branch = auto
