--- a/.gitconfig
+++ b/.gitconfig
@@ -19,6 +19,7 @@
 	undo = reset --soft HEAD^
 	amend = commit --amend
 	random = !"git add -A; git commit -am \"$(echo $(curl -s http://whatthecommit.com/index.txt)\" (http://whatthecommit.com)\")\""
+	deliver = "!bash ~/builds/git-deliver/deliver.sh"
 
 [color]
 	branch = auto
