--- a/.psqlrc
+++ b/.psqlrc
@@ -5,3 +5,5 @@
 
 \set HISTCONTROL ignorespace
 \set HISTSIZE 1000
+
+\set PROMPT1 '%[%033[32m%]psql:%[%033[36m%]//%n%[%033[34m%]@%[%033[36m%]%`hostname`:%>%[%033[33m%]/%/ %[%033[K%]%[%033[0m%]%[%033[1;33m%]%#%[%033[0m%] '
