--- a/.gitconfig
+++ b/.gitconfig
@@ -14,14 +14,27 @@
     br = branch
     ci = commit
     st = status
-    ls = log --oneline
-    caa = commit -a --amend -C HEAD
     unstage = reset HEAD --
     last = log -1 HEAD
     undo = reset --soft HEAD^
     amend = commit --amend
-    new = !sh -c 'git log $1@{1}..$1@{0} "$@"'
+
+    ;
+    ; http://blogs.atlassian.com/2014/10/advanced-git-aliases/
+    ;
+    ls = log --oneline
+
+    ; caa: commit amend append
+    ; Take all uncommitted and un-staged changes currently in the working directory and add them to the previous commit.
+    caa = commit -a --amend -C HEAD
+
+    ; bclean: branch clean
+    ; Remove local branches that have already been merged to master.
     bclean = "!f() { git branch --merged ${1-master} | grep -v " ${1-master}$" | xargs -r git branch -d; }; f"
+
+    ; new: see new commits
+    ; Displays commits created by the last command (typically after a git pull).
+    new = !sh -c 'git log $1@{1}..$1@{0} "$@"'
 
 [color]
     branch = auto
@@ -32,13 +45,13 @@
     current = yellow reverse
     local = yellow
     remote = green
- 
+
 [color "diff"]
     meta = yellow bold
     frag = magenta bold
     old = red bold
     new = green bold
- 
+
 [color "status"]
     added = yellow
     changed = green
