--- a/.config/i3/config
+++ b/.config/i3/config
@@ -149,6 +149,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Screenshot
+bindsym Print exec scrot -e 'mv $f ~/pictures/ 2>/dev/null'
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
