--- a/.config/i3/config
+++ b/.config/i3/config
@@ -152,6 +152,9 @@ bindsym $mod+r mode "resize"
 # Screenshot
 bindsym Print exec scrot -e 'mv $f ~/pictures/ 2>/dev/null'
 
+# Screen lock
+bindsym control+l exec 'lock'
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
