--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,12 +43,6 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
@@ -153,7 +147,7 @@ bindsym $mod+r mode "resize"
 bindsym Print exec scrot -e 'mv $f ~/pictures/ 2>/dev/null'
 
 # Screen lock
-bindsym control+l exec 'lock'
+bindsym $mod+l exec 'lock'
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
