Add git GPG key

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [user]
     name = Rodolphe Breard
     email = rodolphe@what.tf
+    SigningKey = B229CCD5690091E7D5D6189F09BC23A1D5562635
 
 [core]
     editor = vim
