Open links in a private window

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 font_family inconsolata
 font_size   9
 
-open_url_with           firefox
+open_url_with           firefox --private-window
 enable_audio_bell       no
 allow_remote_control    no
