--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    name = Rodolphe Breard
+    name = Rodolphe Bréard
     email = rodolphe@what.tf
     SigningKey = B229CCD5690091E7D5D6189F09BC23A1D5562635
 
