Add a light transparency on kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,6 @@
-font_family Inconsolata
-font_size   9
+background_opacity  0.92
+font_family         Inconsolata
+font_size           9
 
 open_url_with           firefox --private-window
 enable_audio_bell       no
